fix: hero vertical alignment and mobile logos

--- a/assets/styles/components/_HeroHeadlineHome.scss
+++ b/assets/styles/components/_HeroHeadlineHome.scss
@@ -145,15 +145,15 @@
 
 			//scroll down button base
 			&:first-child {
+				position: relative;
+				height: 100%;
 
-				&,
 				> .elementor-column-wrap,
 				> .elementor-column-wrap > .elementor-widget-wrap {
-					height: 100%;
+					position: initial;
 				}
 
 				> .elementor-column-wrap > .elementor-widget-wrap {
-					position: relative;
 					padding-bottom: 6.5em !important;
 				}
 			}
@@ -269,6 +269,11 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
+		display: none;
+
+		@media (min-width: $breakpoint-tablet) {
+			display: block;
+		}
 
 		a {
 			position: relative;
@@ -304,8 +309,12 @@
 	}
 
 	.Clients {
-		justify-content: flex-start;
+		justify-content: center;
 		margin: 0;
+
+		@media (min-width: $breakpoint-tablet) {
+			justify-content: flex-start;
+		}
 
 		&__item {
 			margin: 0 !important;
